--- a/05_hw/CMakeLists.txt
+++ b/05_hw/CMakeLists.txt
@@ -5,3 +5,6 @@ add_library(stack stack.c)
 
 add_executable(main main.c)
 target_link_libraries(main stack)
+
+#add_executable(stack_tests tests.c)
+#target_link_libraries(stack_tests stack)
